--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@hotwired/stimulus": "3.2.1",
+    "@hotwired/stimulus-loading": "^1.2.0",
     "@hotwired/turbo-rails": "7.2.5",
     "autoprefixer": "10.4.13",
     "esbuild": "0.16.17",
